changes the name of the folder

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <h1 class="title">Hello my name is Hakim</h1>
-    <div class="my-picture"><img src="images/pikachu.png" alt="" /></div>
+    <div class="my-picture"><img src="Images/pikachu.png" alt="" /></div>
     <h2 class="biodata">Biodata</h2>
     <p class="description">
       Muhammad Hakim bin Md Nazri, a 21-year-old Malaysian student at the
